getLast
Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>