@@ -98,9 +98,7 @@ public class ForkIdManager {
         return forkId;
       }
     }
-    return allForkIds.isEmpty()
-        ? new ForkId(genesisHashCrc, 0)
-        : allForkIds.get(allForkIds.size() - 1);
+    return allForkIds.isEmpty() ? new ForkId(genesisHashCrc, 0) : allForkIds.getLast();
   }
 
   @VisibleForTesting
@@ -240,8 +238,6 @@ public class ForkIdManager {
         return forkId;
       }
     }
-    return allForkIds.isEmpty()
-        ? new ForkId(genesisHashCrc, 0)
-        : allForkIds.get(allForkIds.size() - 1);
+    return allForkIds.isEmpty() ? new ForkId(genesisHashCrc, 0) : allForkIds.getLast();
   }
 }
